--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,25 @@ body {
 }
 
 .board-game {
+  width: 400px;
+  height: 400px;
+  background: white;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  span {
+    width: 33.33333%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #333;
+    font-size: 30px;
+
+    &:hover {
+      background: #f6f6f6;
+      cursor: pointer;
+    }
+  }
 }
