--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,40 @@ body {
       background: #f6f6f6;
       cursor: pointer;
     }
+
+    &::after {
+      content: '';
+      display: none;
+      width: 180%;
+      height: 10px;
+      background: black;
+      position: absolute;
+    }
+
+    &.horizontal {
+      &::after {
+        display: block;
+      }
+    }
+    &.vertical {
+      &::after {
+        display: block;
+        rotate: 40deg;
+      }
+    }
+    &.diagonal-1 {
+      &::after {
+        display: block;
+        rotate: 45deg;
+      }
+    }
+    &.diagonal-2 {
+      &::after {
+        display: block;
+        rotate: 135deg;
+      }
+    }
+
     abbr {
       font-size: 20px;
       color: rgba(0,0,0,0.5);
